overlays/prod/discord/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discord
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discord
  template:
    metadata:
      labels:
        app: discord
    spec:
      containers:
      - name: api
        image: adhp/discord:zan
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          requests:
            cpu: 20m
            memory: 5Mi
          limits:
            cpu: 100m
            memory: 64Mi
