overlays/prod/discord/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discord-service
  labels:
    app: discord
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: discord
